fix flickering of comment/show

--- a/src/pages/Comments/Show/style.scss
+++ b/src/pages/Comments/Show/style.scss
@@ -34,7 +34,7 @@
   .header {
     max-width: 100%;
     display: grid;
-    grid-template-columns: 40px auto;
+    grid-template-columns: 40px minmax(auto, 100%) auto;
     grid-template-rows: 40px auto;
     margin-bottom: 10px;
   }
@@ -66,9 +66,44 @@
     line-height: 1em;
   }
 
+  .btnBar {
+    margin: 0;
+    display: flex;
+
+    button {
+      background-color: inherit;
+      color: #6c6c6c;
+      // border:1px black solid;
+      display: flex;
+      align-items: center;
+
+      &:hover {
+        background-color: $danger;
+        color: #fff;
+      }
+
+      &:hover:nth-child(2) {
+        background-color: $info;
+      }
+
+      span {
+        display: inline-block;
+        width: 0;
+        overflow: hidden;
+        // border:1px solid black;
+        transition: width 0.2s ease, padding 0.2s ease;
+      }
+
+      &:hover span {
+        padding-left: 5px;
+        width: 40px;
+      }
+    }
+  }
+
   .cardSubtitle {
     grid-row: 2/3;
-    grid-column: 1/3;
+    grid-column: 1/-1;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
